# sublime-lojoja-colors

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  build.py  lojojaDark.sublime-color-scheme  lojojaDark.tmTheme  lojojaDarkBright.sublime-color-scheme  lojojaDarkBright.tmTheme  lojojaLight.sublime-color-scheme  lojojaLight.tmTheme  lojojaLightBright.sublime-color-scheme  lojojaLightBright.tmTheme  pyproject.toml  sublime-lojoja-colors.sublime-project
.github/workflows/: style.yml  tests.yml  validate.yml
source/: colors.json  lojojaDark.YAML-tmTheme  lojojaDarkBright.YAML-tmTheme  lojojaLight.YAML-tmTheme  lojojaLightBright.YAML-tmTheme  schemes.json  template.json
src/: sublime_lojoja_colors.py
src/data/: config.json  config.schema.json  schemes.json  template.json  template.sublime-color-scheme
tests/: test_sublime_lojoja_colors.py
